--- a/Aula1206/Aula1206/Views/Categorias/Index.cshtml
+++ b/Aula1206/Aula1206/Views/Categorias/Index.cshtml
@@ -1,14 +1,33 @@
-﻿@{
+﻿@model IEnumerable<Aula1206.Models.Categoria>
+
+@{
     ViewBag.Title = "Categorias";
 }
 
 <h2>@ViewBag.Title</h2>
 
-@foreach (string cat in ViewBag.ListaCategorias)
-{
-    //<p>@cat</p>
-    //<a href="#">@cat</a>
-    @Html.ActionLink(@cat, "Index", "Categoiras")
-    @: |
-}
+@* Utilizando ViewBag
+    @foreach (string cat in ViewBag.ListaCategorias)
+    {
+        //<p>@cat</p>
+        //<a href="#">@cat</a>
+        @Html.ActionLink(@cat, "Index", "Categoiras")
+        @: |
+    }
+*@
 
+@foreach (var cat in Model)
+{
+    <dl>
+        <dt>@cat.Nome</dt>
+        @if (!string.IsNullOrEmpty(cat.Descricao))
+        {
+            <dd>@cat.Descricao</dd>
+        }else
+        {
+            <dd>
+                <em>Sem Descrição</em>
+            </dd>
+        }
+    </dl>
+}
